# GigaRequester

./: .gitignore  README.md  giga_example.ipynb  pyproject.toml
db/: crm.db  insert_data.sql  schema.sql
src/: __init__.py  giga_agent.py  tools.py
